# ConnectFourHS

./: ConnectFour.cabal  ConnectFour.hs  Main.hs  README.md
app/: Main.hs
src/: Lib.hs
