name:                ConnectFour
version:             0.1.0.0
synopsis:            Connect Four game (for practicing Haskell development)
homepage:            https://github.com/iamteem/ConnectFour#readme
author:              Tim Medina
maintainer:          iamteem@gmail.com
copyright:           Tim Medina
category:            Games
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , transformers >= 0.5
                     , text
                     , haskeline >= 0.7
  default-language:    Haskell2010

executable ConnectFour-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ConnectFour
  default-language:    Haskell2010

test-suite ConnectFour-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ConnectFour
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iamteem/ConnectFour
